--- a/style.css
+++ b/style.css
@@ -1,12 +1,23 @@
-h1{
-    color:red;
 
+.fonttype{
+    color:black;
+    font-family:"Pacifico";
 }
 .black_border{
     border-color:black;
     border-style:solid;
     border-width:5px;
-    border-radius:50px;
+    border-radius:50%;
     padding:1px;
     margin:1px;
+}
+#background{
+    background-color:#33FFCC
+}
+
+[type="submit"]{
+    padding:0px;
+    margin:10px;
+    width:100px;
+    height:28px;
 }
