--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 .fonttype{
     color:black;
-    font-family:"Pacifico";
+    font-family:"Pacifico", cursive;
 }
 .black_border{
     border-color:black;
